sumo/tests/sumo/errors/traffic_lights/initial_wrong_phase_size1/errors.sumo
Error: Mismatching phase size in tls '0', program '0'.
Error: Traffic lights could not be built.
Quitting (on error).
